# c-final-project

./: .gitignore  .replit  CMakeLists.txt  README.md  TODO.md  constants.h  main.c  physics.c  physics.h  render.c  render.h  ui.c  ui.h  utils.c  utils.h
include/SFML/Graphics/: Color.h
resources/: config.txt
